--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,11 @@
   //* Formatação e Lint
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
+  "code-runner.clearPreviousOutput": true,
+  "code-runner.runInTerminal": true,
+  "code-runner.executorMap": {
+    "typescript": "clear ; npx tsx",  
+  },
 
   "editor.codeActionsOnSave": {
   "source.fixAll.eslint": "explicit"
